# Podcast_generator_TTS

./: README.md  main.py  pyproject.toml  requirements.txt
app/: config.py  main.py
app/models/: usage.py  user.py
app/routes/: admin.py  podcast.py  stream.py  tts.py
app/services/: cache_service.py  chunker.py  llm_service.py  tts_service.py  usage_service.py  zip_service.py
app/utils/: hashing.py
frontend/: index.html  script.js  style.css
output/: response_1771340127060.json
tests/: test_routes.py
